--- a/promoslider.css
+++ b/promoslider.css
@@ -1,17 +1,3 @@
-lesshat-selector {
-  -lh-property: 0; } 
-@-webkit-keyframes promoFadeOut{ 0%{ opacity: 1; } 100%{ opacity: 0; }}
-@-moz-keyframes promoFadeOut{ 0%{ opacity: 1; } 100%{ opacity: 0; }}
-@-o-keyframes promoFadeOut{ 0%{ opacity: 1; } 100%{ opacity: 0; }}
-@keyframes promoFadeOut{ 0%{ opacity: 1; } 100%{ opacity: 0; };
-}
-lesshat-selector {
-  -lh-property: 0; } 
-@-webkit-keyframes promoFadeIn{ 0%{ opacity: 0; } 100%{ opacity: 1; }}
-@-moz-keyframes promoFadeIn{ 0%{ opacity: 0; } 100%{ opacity: 1; }}
-@-o-keyframes promoFadeIn{ 0%{ opacity: 0; } 100%{ opacity: 1; }}
-@keyframes promoFadeIn{ 0%{ opacity: 0; } 100%{ opacity: 1; };
-}
 .promoOverlay {
   position: fixed;
   width: 100%;
@@ -114,7 +100,7 @@ lesshat-selector {
 .promoContainer.fullscreen .promoSlides .promoSlide .promoLink {
   height: 100%;
   width: auto;
-  max-width: initial;
+  max-width: none;
 }
 .promoContainer.fullscreen .promoSlides .promoSlide .slideContent .slideContentInner {
   height: 100% !important;
@@ -610,16 +596,24 @@ lesshat-selector {
   -o-transition-duration: 0.5s;
   transition-duration: 0.5s;
 }
-.promoContent .promoPager a img {
-  width: auto;
-  height: 32px;
-  margin-top: 8px;
-  border: 2px solid #ffffff;
-}
 .promoContent .promoPager.thumb a {
   padding: 0;
   font: normal 32px/48px sans-serif;
   top: -4px;
+  zoom: 1;
+  filter: alpha(opacity=100);
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
+}
+.promoContent .promoPager.thumb a img {
+  width: auto;
+  height: 32px;
+  margin-top: 8px;
+  border: 1px solid transparent;
+}
+.promoContent .promoPager.thumb a.active img {
+  border-color: #ffffff;
 }
 .promoContent .promoPager.numeric a {
   font: normal 17px/48px sans-serif;
