--- a/promoslider.css
+++ b/promoslider.css
@@ -58,6 +58,9 @@
   0% {
     opacity: 0;
   }
+  25% {
+    opacity: 0.5;
+  }
   100% {
     opacity: 1;
   }
@@ -87,23 +90,6 @@
   z-index: 9991;
   pointer-events: none;
 }
-.promoContainer.fadeIn {
-  -webkit-animation: promoFadeIn 0.5s ease-in 0.2s 1 forwards;
-  -moz-animation: promoFadeIn 0.5s ease-in 0.2s 1 forwards;
-  -o-animation: promoFadeIn 0.5s ease-in 0.2s 1 forwards;
-  animation: promoFadeIn 0.5s ease-in 0.2s 1 forwards;
-  zoom: 1;
-  filter: alpha(opacity=0);
-  -webkit-opacity: 0;
-  -moz-opacity: 0;
-  opacity: 0;
-}
-.promoContainer.fadeOut {
-  -webkit-animation: promoFadeOut 0.25s ease-out;
-  -moz-animation: promoFadeOut 0.25s ease-out;
-  -o-animation: promoFadeOut 0.25s ease-out;
-  animation: promoFadeOut 0.25s ease-out;
-}
 .promoContainer * {
   color: #ffffff;
   text-decoration: none;
@@ -117,10 +103,10 @@
 .promoContainer.interstitial .promoOverlay {
   background: #ffffff;
   zoom: 1;
-  filter: alpha(opacity=99);
-  -webkit-opacity: 0.99;
-  -moz-opacity: 0.99;
-  opacity: 0.99;
+  filter: alpha(opacity=100);
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
 }
 .promoContainer.interstitial .interstitialText {
   z-index: 9996;
@@ -263,42 +249,30 @@
   height: 100%;
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide {
-  -webkit-transform-origin: center;
-  -moz-transform-origin: center;
-  -o-transform-origin: center;
-  -ms-transform-origin: center;
-  transform-origin: center;
   -webkit-transform: translateZ(0px);
   -moz-transform: translateZ(0px);
   -o-transform: translateZ(0px);
   -ms-transform: translateZ(0px);
   transform: translateZ(0px);
-  -webkit-transition: width 0.8s ease-in-out;
-  -moz-transition: width 0.8s ease-in-out;
-  -o-transition: width 0.8s ease-in-out;
-  transition: width 0.8s ease-in-out;
-  width: 100%;
+  -webkit-transition-property: width;
+  -moz-transition-property: width;
+  -o-transition-property: width;
+  transition-property: width;
   height: 100%;
+  overflow: hidden;
   float: left;
   display: block;
   position: relative;
   text-align: center;
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide:first-child {
-  overflow: hidden;
   width: 1px;
-  visibility: hidden;
   margin-left: -1px;
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide:first-child + .promoSlide,
 .promoContent .promoSlidesWrap .promoSlides .promoSlide:first-child + .promoSlide + .promoSlide,
 .promoContent .promoSlidesWrap .promoSlides .promoSlide:first-child + .promoSlide + .promoSlide + .promoSlide {
   width: 25%;
-  zoom: 1;
-  filter: alpha(opacity=99);
-  -webkit-opacity: 0.99;
-  -moz-opacity: 0.99;
-  opacity: 0.99;
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide:first-child + .promoSlide + .promoSlide {
   -webkit-transition: none;
@@ -308,7 +282,6 @@
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide .slideContent {
   height: 100%;
-  overflow: hidden;
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide .slideContent:before {
   content: "";
@@ -317,12 +290,11 @@
   vertical-align: middle;
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide .slideContent .slideContentInner {
-  width: auto;
-  height: auto;
   display: inline-block;
   max-width: 100%;
   max-height: 100%;
   position: relative;
+  overflow: hidden;
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide .slideContent .slideContentInner .promoCaption {
   width: 100%;
@@ -342,8 +314,7 @@
 .promoContent .promoSlidesWrap .promoSlides .promoSlide .slideContent .slideContentInner .promoLink {
   position: relative;
   display: block;
-  max-width: 100%;
-  max-height: 100%;
+  height: 100%;
   margin: 0 auto;
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide .slideContent .slideContentInner .promoImage {
@@ -386,10 +357,6 @@
   -webkit-opacity: 0;
   -moz-opacity: 0;
   opacity: 0;
-  -webkit-transition: opacity 0.25s;
-  -moz-transition: opacity 0.25s;
-  -o-transition: opacity 0.25s;
-  transition: opacity 0.25s;
 }
 .promoContent.hover.close .promoClose {
   zoom: 1;
@@ -418,17 +385,13 @@
   -webkit-opacity: 0;
   -moz-opacity: 0;
   opacity: 0;
-  -webkit-transition: opacity 0.25s;
-  -moz-transition: opacity 0.25s;
-  -o-transition: opacity 0.25s;
-  transition: opacity 0.25s;
 }
 .promoContent.hover:hover .promoCounter {
   zoom: 1;
-  filter: alpha(opacity=99);
-  -webkit-opacity: 0.99;
-  -moz-opacity: 0.99;
-  opacity: 0.99;
+  filter: alpha(opacity=100);
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
 }
 .promoContent.hover:hover .promoClose {
   zoom: 1;
@@ -453,10 +416,10 @@
 }
 .promoContent.hover:hover .promoPager {
   zoom: 1;
-  filter: alpha(opacity=99);
-  -webkit-opacity: 0.99;
-  -moz-opacity: 0.99;
-  opacity: 0.99;
+  filter: alpha(opacity=100);
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
 }
 .promoContent.vertical .promoSlides {
   top: 0;
@@ -473,11 +436,6 @@
   -moz-transition-property: height;
   -o-transition-property: height;
   transition-property: height;
-  -webkit-transform-origin: center;
-  -moz-transform-origin: center;
-  -o-transform-origin: center;
-  -ms-transform-origin: center;
-  transform-origin: center;
 }
 .promoContent.vertical .promoSlides .promoSlide:first-child {
   width: 100%;
@@ -508,10 +466,10 @@
   -webkit-opacity: 0;
   -moz-opacity: 0;
   opacity: 0;
-  -webkit-transition: opacity 0.8s ease-in-out !important;
-  -moz-transition: opacity 0.8s ease-in-out !important;
-  -o-transition: opacity 0.8s ease-in-out !important;
-  transition: opacity 0.8s ease-in-out !important;
+  -webkit-transition-property: opacity !important;
+  -moz-transition-property: opacity !important;
+  -o-transition-property: opacity !important;
+  transition-property: opacity !important;
 }
 .promoContent.fade .promoSlides .promoSlide:first-child {
   left: 25%;
@@ -531,10 +489,10 @@
   z-index: 97;
   left: -25%;
   zoom: 1;
-  filter: alpha(opacity=99);
-  -webkit-opacity: 0.99;
-  -moz-opacity: 0.99;
-  opacity: 0.99;
+  filter: alpha(opacity=100);
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
 }
 .promoContent.fade .promoSlides .promoSlide:first-child + .promoSlide + .promoSlide + .promoSlide {
   left: -50%;
@@ -577,10 +535,6 @@
   -webkit-opacity: 0.5;
   -moz-opacity: 0.5;
   opacity: 0.5;
-  -webkit-transition: opacity 0.25s;
-  -moz-transition: opacity 0.25s;
-  -o-transition: opacity 0.25s;
-  transition: opacity 0.25s;
   z-index: 9997;
   -webkit-transform: translateZ(0px);
   -moz-transform: translateZ(0px);
@@ -591,10 +545,10 @@
 .promoContent .promoNext:hover,
 .promoContent .promoPrev:hover {
   zoom: 1 !important;
-  filter: alpha(opacity=99) !important;
-  -webkit-opacity: 0.99 !important;
-  -moz-opacity: 0.99 !important;
-  opacity: 0.99 !important;
+  filter: alpha(opacity=100) !important;
+  -webkit-opacity: 1 !important;
+  -moz-opacity: 1 !important;
+  opacity: 1 !important;
 }
 .promoContent .promoNext span,
 .promoContent .promoPrev span {
@@ -634,10 +588,6 @@
   -moz-opacity: 0.5;
   opacity: 0.5;
   font: normal 36px/48px sans-serif;
-  -webkit-transition: opacity 0.8s ease-out;
-  -moz-transition: opacity 0.8s ease-out;
-  -o-transition: opacity 0.8s ease-out;
-  transition: opacity 0.8s ease-out;
   -webkit-transform: translateZ(0px);
   -moz-transform: translateZ(0px);
   -o-transform: translateZ(0px);
@@ -649,14 +599,10 @@
 .promoContent .promoPager a.active:hover,
 .promoContent .promoPager a:hover {
   zoom: 1;
-  filter: alpha(opacity=99);
-  -webkit-opacity: 0.99;
-  -moz-opacity: 0.99;
-  opacity: 0.99;
-  -webkit-transition-duration: 0.5s;
-  -moz-transition-duration: 0.5s;
-  -o-transition-duration: 0.5s;
-  transition-duration: 0.5s;
+  filter: alpha(opacity=100);
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
 }
 .promoContent .promoPager.thumb a {
   padding: 0;
@@ -690,10 +636,10 @@
   padding: 0 1px 0 0;
   display: table-cell;
   zoom: 1;
-  filter: alpha(opacity=99);
-  -webkit-opacity: 0.99;
-  -moz-opacity: 0.99;
-  opacity: 0.99;
+  filter: alpha(opacity=100);
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
   height: 48px;
 }
 .promoContent .promoPager.progress a span {
@@ -738,18 +684,14 @@
   -webkit-opacity: 0.75;
   -moz-opacity: 0.75;
   opacity: 0.75;
-  -webkit-transition: opacity 0.25s;
-  -moz-transition: opacity 0.25s;
-  -o-transition: opacity 0.25s;
-  transition: opacity 0.25s;
   z-index: 9998;
 }
 .promoContent .promoClose:hover {
   zoom: 1 !important;
-  filter: alpha(opacity=99) !important;
-  -webkit-opacity: 0.99 !important;
-  -moz-opacity: 0.99 !important;
-  opacity: 0.99 !important;
+  filter: alpha(opacity=100) !important;
+  -webkit-opacity: 1 !important;
+  -moz-opacity: 1 !important;
+  opacity: 1 !important;
 }
 .promoContent .promoClose.inside {
   top: 0;
@@ -764,10 +706,10 @@
   font: normal 15px/48px sans-serif;
   display: inline-block;
   zoom: 1;
-  filter: alpha(opacity=99);
-  -webkit-opacity: 0.99;
-  -moz-opacity: 0.99;
-  opacity: 0.99;
+  filter: alpha(opacity=100);
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  opacity: 1;
 }
 .promoContent .promoCounter.inside {
   top: 0;
@@ -810,4 +752,21 @@
 }
 .promoContent.ie8 .promoLink {
   display: block;
+}
+.fadeIn {
+  -webkit-animation: promoFadeIn 0.5s linear 0.2s 1 forwards;
+  -moz-animation: promoFadeIn 0.5s linear 0.2s 1 forwards;
+  -o-animation: promoFadeIn 0.5s linear 0.2s 1 forwards;
+  animation: promoFadeIn 0.5s linear 0.2s 1 forwards;
+  zoom: 1;
+  filter: alpha(opacity=0);
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  opacity: 0;
+}
+.fadeOut {
+  -webkit-animation: promoFadeOut 0.25s ease-out;
+  -moz-animation: promoFadeOut 0.25s ease-out;
+  -o-animation: promoFadeOut 0.25s ease-out;
+  animation: promoFadeOut 0.25s ease-out;
 }
