--- a/less/promoslider.less
+++ b/less/promoslider.less
@@ -249,7 +249,7 @@
       height: 100%;
       .promoSlide {
         //        .transform-origin(center);
-                .transform(translateZ(0));
+        .transform(translateZ(0));
         //        .transition(width 0.8s ease-in-out);
         .transition-property(width);
         //        width: 100%;
@@ -259,11 +259,13 @@
         display: block;
         position: relative;
         text-align: center;
+        visibility: hidden;
         &:first-child {
           width: 1px;
           margin-left: -1px;
           + .promoSlide, + .promoSlide + .promoSlide, + .promoSlide + .promoSlide + .promoSlide {
             width: 25%;
+            visibility: visible;
             //            .opacity(.99);
           }
           + .promoSlide + .promoSlide {
@@ -284,6 +286,7 @@
             display: inline-block;
             max-width: 100%;
             max-height: 100%;
+            height: 100%;
             position: relative;
             overflow: hidden;
             .promoCaption {
@@ -472,7 +475,7 @@
     .opacity(.5);
     //    .transition(opacity 0.25s);
     z-index: 9997;
-        .transform(translateZ(0));
+    .transform(translateZ(0));
     &:hover {
       .opacity(1) !important;
     }
@@ -513,7 +516,7 @@
       .opacity(.5);
       font: normal 36px/48px sans-serif;
       //      .transition(opacity 0.8s ease-out);
-            .transform(translateZ(0));
+      .transform(translateZ(0));
       text-decoration: none;
       &.active, &.active:hover, &:hover {
         .opacity(1);
@@ -544,7 +547,7 @@
     &.progress {
       display: table;
       a {
-        padding: 0 1px 0 0;
+        padding: 0 1px;
         display: table-cell;
         .opacity(1);
         height: 48px;
@@ -642,15 +645,15 @@
   }
 }
 
-//.seekAnim .promoSlide {
-////  .transition(none) !important;
-//}
+.seekAnim .promoSlide {
+  .transition(none) !important;
+}
 
 .fadeIn {
-  .animation(promoFadeIn 0.5s linear 0.2s 1 forwards);
+  .animation(promoFadeIn 0.25s linear 0.2s 1 forwards);
   .opacity(0);
 }
 
 .fadeOut {
-  .animation(promoFadeOut 0.25s ease-out);
+  .animation(promoFadeOut 0.25s linear);
 }
