--- a/promoslider.css
+++ b/promoslider.css
@@ -264,6 +264,7 @@
   display: block;
   position: relative;
   text-align: center;
+  visibility: hidden;
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide:first-child {
   width: 1px;
@@ -273,6 +274,7 @@
 .promoContent .promoSlidesWrap .promoSlides .promoSlide:first-child + .promoSlide + .promoSlide,
 .promoContent .promoSlidesWrap .promoSlides .promoSlide:first-child + .promoSlide + .promoSlide + .promoSlide {
   width: 25%;
+  visibility: visible;
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide:first-child + .promoSlide + .promoSlide {
   -webkit-transition: none;
@@ -293,6 +295,7 @@
   display: inline-block;
   max-width: 100%;
   max-height: 100%;
+  height: 100%;
   position: relative;
   overflow: hidden;
 }
@@ -633,7 +636,7 @@
   display: table;
 }
 .promoContent .promoPager.progress a {
-  padding: 0 1px 0 0;
+  padding: 0 1px;
   display: table-cell;
   zoom: 1;
   filter: alpha(opacity=100);
@@ -753,11 +756,17 @@
 .promoContent.ie8 .promoLink {
   display: block;
 }
+.seekAnim .promoSlide {
+  -webkit-transition: none !important;
+  -moz-transition: none !important;
+  -o-transition: none !important;
+  transition: none !important;
+}
 .fadeIn {
-  -webkit-animation: promoFadeIn 0.5s linear 0.2s 1 forwards;
-  -moz-animation: promoFadeIn 0.5s linear 0.2s 1 forwards;
-  -o-animation: promoFadeIn 0.5s linear 0.2s 1 forwards;
-  animation: promoFadeIn 0.5s linear 0.2s 1 forwards;
+  -webkit-animation: promoFadeIn 0.25s linear 0.2s 1 forwards;
+  -moz-animation: promoFadeIn 0.25s linear 0.2s 1 forwards;
+  -o-animation: promoFadeIn 0.25s linear 0.2s 1 forwards;
+  animation: promoFadeIn 0.25s linear 0.2s 1 forwards;
   zoom: 1;
   filter: alpha(opacity=0);
   -webkit-opacity: 0;
@@ -765,8 +774,8 @@
   opacity: 0;
 }
 .fadeOut {
-  -webkit-animation: promoFadeOut 0.25s ease-out;
-  -moz-animation: promoFadeOut 0.25s ease-out;
-  -o-animation: promoFadeOut 0.25s ease-out;
-  animation: promoFadeOut 0.25s ease-out;
+  -webkit-animation: promoFadeOut 0.25s linear;
+  -moz-animation: promoFadeOut 0.25s linear;
+  -o-animation: promoFadeOut 0.25s linear;
+  animation: promoFadeOut 0.25s linear;
 }
