--- a/less/promoslider.less
+++ b/less/promoslider.less
@@ -92,13 +92,16 @@
 
 .promoContainer {
   position: fixed;
+  max-width: 100%;
+  max-height: 100%;
   width: 100%;
   height: 100%;
-  text-align: center;
   top: 0;
   left: 0;
   z-index: 9991;
-  pointer-events: none;
+  padding: 48px 0;
+  text-align: center;
+  box-sizing: border-box;
   * {
     color: @color1;
     text-decoration: none;
@@ -114,6 +117,9 @@
       background: @color1;
       .opacity(1);
     }
+//    .promoContentWrap {
+//      margin-top: 48px;
+//    }
     .interstitialText {
       z-index: 9996;
       position: fixed;
@@ -136,7 +142,8 @@
     }
   }
   &.fullscreen {
-    .promoSlidesWrap, .promoContent {
+    padding: 0;
+    .promoContentWrap, .promoSlidesWrap {
       top: 0;
       left: 0;
       right: 0;
@@ -146,18 +153,18 @@
       max-width: 100% !important;
       max-height: 100% !important;
     }
-    .promoSlides {
-      .promoSlide {
-        .promoImage, .promoLink {
-          height: 100%;
-          width: auto;
-          max-width: none;
-        }
-        .slideContent {
-          .slideContentInner {
-            height: 100% !important;
-          }
-        }
+    .promoImage, .promoLink {
+      height: 100% !important;
+      width: auto !important;
+      max-width: none;
+    }
+    .slideContent {
+      height: 100%;
+      &:before {
+        content: none;
+      }
+      .slideContentInner {
+        height: 100% !important;
       }
     }
     .actionButtons {
@@ -185,7 +192,6 @@
       bottom: auto;
     }
     .promoCounter {
-      left: 48px;
       top: 3%;
       bottom: auto;
     }
@@ -216,29 +222,34 @@
 }
 
 .promoContent {
-  width: 100%;
-  position: relative;
-  display: block;
-  z-index: 9992;
-  pointer-events: all;
-  margin: 0 auto;
-  top: 15%;
   .ratioPlaceholder {
     z-index: -20;
     visibility: hidden;
   }
+  //    height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  //  position: relative;
+  //  top: 48px;
+  //  bottom: 48px;
+  //  left: 48px;
+  //  right: 48px;
+  display: block;
+  //  z-index: 9992;
+  pointer-events: all;
+  margin: 0 auto;
   a:focus {
     background: transparent;
     outline: 0;
   }
   .promoSlidesWrap {
-    height: 100%;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
+    //    height: 100%;
     overflow: hidden;
     position: absolute;
+    top: 48px;
+    bottom: 48px;
+    right: 48px;
+    left: 48px;
     .promoSlides {
       list-style: none;
       margin: 0;
@@ -253,7 +264,7 @@
         //        .transition(width 0.8s ease-in-out);
         .transition-property(width);
         //        width: 100%;
-        height: 100%;
+        //          height: 100%;
         overflow: hidden;
         float: left;
         display: block;
@@ -266,13 +277,17 @@
           + .promoSlide, + .promoSlide + .promoSlide, + .promoSlide + .promoSlide + .promoSlide {
             width: 25%;
             visibility: visible;
-            //            .opacity(.99);
+            height: 100%;
+          }
+          + .promoSlide + .promoSlide + .promoSlide + .promoSlide {
+            height: 0;
           }
           + .promoSlide + .promoSlide {
             .transition(none);
           }
         }
         .slideContent {
+          max-height: 100%;
           height: 100%;
           &:before {
             content: "";
@@ -290,7 +305,7 @@
             position: relative;
             overflow: hidden;
             .promoCaption {
-              width: 100%;
+              min-width: 100%;
               box-sizing: border-box;
               position: absolute;
               bottom: 0;
@@ -304,42 +319,62 @@
               }
             }
             .promoImage, .promoLink {
-              position: relative;
-              display: block;
-              //              max-width: 100%;
-              //              max-height: 100%;
               height: 100%;
+              position: relative;
+              display: inline-block;
+              max-width: 100%;
+              max-height: 100%;
+              width: auto;
               margin: 0 auto;
             }
             .promoImage {
               vertical-align: middle;
               border: none;
-              display: block;
+              //                display: block;
             }
           }
         }
       }
     }
   }
+}
+
+.promoContentWrap {
+//  height: 100%;
+  max-height: 100%;
+  margin: 0 auto;
+  position: relative;
+  text-align: center;
+  padding: 48px;
+  z-index: 9992;
   &.embed {
     * {
       color: @color2;
     }
-    margin: 20px;
-    clear: both;
-    position: relative;
-    top: 0;
-    left: auto;
-    right: auto;
-    bottom: auto;
+    //    .ratioPlaceholder {
+    //      display: none;
+    //    }
+    //    .promoSlide {
+    //      height: auto !important;
+    //    }
+    //    .promoContent {
+    //      position: relative;
+    //    }
+    //    margin: 20px;
+    //    clear: both;
+    //    position: relative;
+    //    top: 0;
+    //    left: auto;
+    //    right: auto;
+    //    bottom: auto;
     z-index: 9980;
     .promoCaption {
       color: @color1;
     }
-    .promoSlidesWrap {
-      max-width: none;
-      height: 100%;
-    }
+    //    .promoSlidesWrap {
+    //      max-width: none;
+    //      height: 100%;
+    //    }
     .promoLink[href="#close"] {
       cursor: default;
     }
@@ -419,7 +454,6 @@
       }
     }
   }
-
   &.fade .promoSlides {
     left: 0;
     .promoSlide {
@@ -447,12 +481,13 @@
   .actionButtons {
     width: 100%;
     position: absolute;
-    top: 100%;
-    padding: 8px 0 0;
+    bottom: 0;
+    left: 0;
+    padding: 8px 0;
     text-align: center;
     z-index: 9997;
     &.top {
-      top: -48px;
+      top: 0;
       bottom: auto;
     }
     a {
@@ -466,7 +501,7 @@
   .promoNext, .promoPrev {
     position: absolute;
     top: 0;
-    left: -48px;
+    left: 0;
     width: 48px;
     padding: 0;
     text-align: center;
@@ -491,19 +526,19 @@
 
   .promoNext {
     left: auto;
-    right: -48px;
+    right: 0;
     &.inside {
-      right: 0;
+      right: 48px;
     }
   }
 
   .promoPrev.inside {
-    left: 0;
+    left: 48px;
   }
 
   .promoPager {
     position: absolute;
-    top: -48px;
+    top: 0;
     left: 20%;
     width: 60%;
     text-align: center;
@@ -566,23 +601,23 @@
       }
     }
     &.inside {
-      top: 0;
+      top: 48px;
       bottom: auto;
       &.bottom {
         top: auto;
-        bottom: 0;
+        bottom: 48px;
       }
     }
     &.bottom {
       top: auto;
-      bottom: -48px;
+      bottom: 0;
     }
   }
 
   .promoClose {
     position: absolute;
-    top: -48px;
-    right: -16px;
+    top: 0;
+    right: 32px;
     display: block;
     text-align: right;
     padding: 0 16px;
@@ -595,22 +630,22 @@
       .opacity(1) !important;
     }
     &.inside {
-      top: 0;
-      right: 0;
+      top: 48px;
+      right: 54px;
     }
   }
   .promoCounter {
     position: absolute;
-    top: -48px;
-    left: 0;
+    top: 0;
+    left: 48px;
     margin: 0;
     z-index: 9997;
     font: normal 15px/48px sans-serif;
     display: inline-block;
     .opacity(1);
     &.inside {
-      top: 0;
-      left: 16px;
+      top: 48px;
+      left: 64px;
     }
   }
   &.single {
