--- a/promoslider.css
+++ b/promoslider.css
@@ -307,9 +307,9 @@
   display: inline-block;
   max-width: 100%;
   max-height: 100%;
-  height: 100%;
   position: relative;
   overflow: hidden;
+  vertical-align: middle;
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide .slideContent .slideContentInner .promoCaption {
   min-width: 100%;
@@ -327,7 +327,6 @@
 }
 .promoContent .promoSlidesWrap .promoSlides .promoSlide .slideContent .slideContentInner .promoImage,
 .promoContent .promoSlidesWrap .promoSlides .promoSlide .slideContent .slideContentInner .promoLink {
-  height: 100%;
   position: relative;
   display: inline-block;
   max-width: 100%;
@@ -519,15 +518,16 @@
 .promoContentWrap .actionButtons {
   width: 100%;
   position: absolute;
-  bottom: 0;
+  top: 100%;
   left: 0;
   padding: 8px 0;
   text-align: center;
   z-index: 9997;
+  margin-top: -48px;
 }
 .promoContentWrap .actionButtons.top {
   top: 0;
-  bottom: auto;
+  margin: 0;
 }
 .promoContentWrap .actionButtons a {
   display: inline-block;
