--- a/less/promoslider.less
+++ b/less/promoslider.less
@@ -170,11 +170,11 @@
     .actionButtons {
       margin: 0;
       position: absolute;
-      bottom: 3%;
+      bottom: 2.5%;
       top: auto;
       &.top {
         bottom: auto;
-        top: 3%;
+        top: 2.5%;
       }
     }
     .promoPrev, .promoNext {
@@ -188,19 +188,19 @@
     }
     .promoClose {
       right: 48px;
-      top: 3%;
+      top: 2.5%;
       bottom: auto;
     }
     .promoCounter {
-      top: 3%;
+      top: 2.5%;
       bottom: auto;
     }
     .promoPager {
-      top: 3%;
+      top: 2.5%;
       bottom: auto;
       &.bottom {
         top: auto;
-        bottom: 3%;
+        bottom: 2.5%;
       }
       &.progress a span {
         background: @color1;
@@ -312,6 +312,7 @@
               bottom: 0;
               padding: 20px 24px;
               margin: 0;
+              background: #777;
               background: rgba(0, 0, 0, 0.5);
               line-height: 1.5;
               &.top {
