--- a/less/promoslider.less
+++ b/less/promoslider.less
@@ -117,9 +117,9 @@
       background: @color1;
       .opacity(1);
     }
-//    .promoContentWrap {
-//      margin-top: 48px;
-//    }
+    //    .promoContentWrap {
+    //      margin-top: 48px;
+    //    }
     .interstitialText {
       z-index: 9996;
       position: fixed;
@@ -202,11 +202,15 @@
         top: auto;
         bottom: 2.5%;
       }
-      &.progress a span {
-        background: @color1;
-      }
-      &.progress a.active ~ a span {
-        background: @color2;
+      &.progress {
+        padding: 0 33%;
+        left: 0;
+        a span {
+          background: @color1;
+        }
+        a.active ~ a span {
+          background: @color2;
+        }
       }
       &.interstitial * {
         color: @color2;
@@ -229,7 +233,7 @@
   //    height: 100%;
   max-width: 100%;
   max-height: 100%;
-//    position: relative;
+  //    position: relative;
   //  top: 48px;
   //  bottom: 48px;
   //  left: 48px;
@@ -298,7 +302,7 @@
           .slideContentInner {
             //            width: auto;
             //            height: auto;
-//            height: 100%;
+            //            height: 100%;
             display: inline-block;
             max-width: 100%;
             max-height: 100%;
@@ -321,7 +325,7 @@
               }
             }
             .promoImage, .promoLink {
-//              height: 100%;
+              //              height: 100%;
               position: relative;
               display: inline-block;
               max-width: 100%;
@@ -342,7 +346,7 @@
 }
 
 .promoContentWrap {
-//  height: 100%;
+  //  height: 100%;
   max-height: 100%;
   margin: 0 auto;
   position: relative;
@@ -510,6 +514,7 @@
     text-align: center;
     height: 100%;
     display: inline-block;
+    text-decoration: none;
     .opacity(.5);
     //    .transition(opacity 0.25s);
     z-index: 9997;
@@ -584,6 +589,10 @@
     }
     &.progress {
       display: table;
+      width: 100%;
+      box-sizing: border-box;
+      padding: 0 20%;
+      left: 48px;
       a {
         padding: 0 1px;
         display: table-cell;
