--- a/promoslider.css
+++ b/promoslider.css
@@ -128,12 +128,30 @@
 .promoContainer.interstitial .promoPager.progress a span {
   background: #000000;
 }
-.promoContainer.interstitial .promoPager.progress a.active ~ a {
+.promoContainer.interstitial .promoPager.progress a.active ~ a span {
   zoom: 1;
   filter: alpha(opacity=25);
   -webkit-opacity: 0.25;
   -moz-opacity: 0.25;
   opacity: 0.25;
+}
+.promoContainer.interstitial .promoPager.progress a:hover ~ a span {
+  zoom: 1 !important;
+  filter: alpha(opacity=25) !important;
+  -webkit-opacity: 0.25 !important;
+  -moz-opacity: 0.25 !important;
+  opacity: 0.25 !important;
+}
+.promoContainer.interstitial .promoPager.progress:hover a span {
+  background: #000000 !important;
+  zoom: 1 !important;
+  filter: alpha(opacity=100) !important;
+  -webkit-opacity: 1 !important;
+  -moz-opacity: 1 !important;
+  opacity: 1 !important;
+}
+.promoContainer.interstitial.interstitial * {
+  color: #000000;
 }
 .promoContainer.fullscreen {
   padding: 0;
@@ -200,10 +218,6 @@
 .promoContainer.fullscreen .promoPager.bottom {
   top: auto;
   bottom: 2.5%;
-}
-.promoContainer.fullscreen .promoPager.progress {
-  padding: 0 33%;
-  left: 0;
 }
 .promoContainer.fullscreen .promoPager.progress a span {
   background: #ffffff;
@@ -652,10 +666,9 @@
 }
 .promoContentWrap .promoPager.progress {
   display: table;
-  width: 100%;
-  box-sizing: border-box;
-  padding: 0 20%;
-  left: 48px;
+  width: 300px;
+  left: 50%;
+  margin-left: -150px;
 }
 .promoContentWrap .promoPager.progress a {
   padding: 0 1px;
@@ -682,6 +695,12 @@
 }
 .promoContentWrap .promoPager.progress a.active ~ a span {
   background: #000000;
+}
+.promoContentWrap .promoPager.progress a:hover ~ a span {
+  background: #000000 !important;
+}
+.promoContentWrap .promoPager.progress:hover a span {
+  background: #ffffff !important;
 }
 .promoContentWrap .promoPager.inside {
   top: 48px;
