interstitial promocaption text color

--- a/less/promoslider.less
+++ b/less/promoslider.less
@@ -157,8 +157,8 @@
         }
       }
     }
-    &.interstitial * {
-      color: @color2;
+    .promoCpption {
+      color: @color1;
     }
   }
   &.fullscreen {
